WIP PDX225 display
Signed-off-by: Konrad Dybcio <konrad.dybcio@linaro.org>

--- a/arch/arm64/boot/dts/qcom/sm6375-sony-xperia-murray-pdx225.dts
+++ b/arch/arm64/boot/dts/qcom/sm6375-sony-xperia-murray-pdx225.dts
@@ -9,6 +9,7 @@
 #define PMK8350_SID 6
 
 #include <dt-bindings/gpio/gpio.h>
+#include <dt-bindings/pinctrl/qcom,pmic-gpio.h>
 #include "sm6375.dtsi"
 #include "pm6125.dtsi"
 #include "pmk8350.dtsi"
@@ -80,6 +81,21 @@
 		};
 	};
 
+	display_avdd_regulator: display-panel-avdd-regulator {
+		compatible = "regulator-fixed";
+		regulator-name = "display_avdd_regulator";
+		regulator-min-microvolt = <3000000>;
+		regulator-max-microvolt = <3000000>;
+		regulator-enable-ramp-delay = <233>;
+		gpio = <&tlmm 24 GPIO_ACTIVE_HIGH>;
+		enable-active-high;
+		regulator-always-on;//HACK
+		regulator-boot-on;
+
+		pinctrl-names = "default";
+		pinctrl-0 = <&display_panel_avdd>;
+	};
+
 	vph_pwr: vph-pwr-regulator {
 		compatible = "regulator-fixed";
 		regulator-name = "vph_pwr";
@@ -88,33 +104,6 @@
 		regulator-always-on;
 		regulator-boot-on;
 	};
-};
-
-&sdc2_off_state {
-	sd-cd-pins {
-		pins = "gpio94";
-		function = "gpio";
-		drive-strength = <2>;
-		bias-disable;
-	};
-};
-
-&sdc2_on_state {
-	sd-cd-pins {
-		pins = "gpio94";
-		function = "gpio";
-		drive-strength = <2>;
-		bias-pull-up;
-	};
-};
-
-&sdhc_2 {
-	status = "okay";
-
-	vmmc-supply = <&pm6125_l22>;
-	vqmmc-supply = <&pm6125_l5>;
-
-	cd-gpios = <&tlmm 94 GPIO_ACTIVE_HIGH>;
 };
 
 &gpi_dma0 {
@@ -137,9 +126,50 @@
 
 		vdd-supply = <&pm6125_l13>;
 
-		pinctrl-names = "default";
-		pinctrl-0 = <&ts_int_default &ts_avdd_default>;
+		// pinctrl-names = "default";
+		// pinctrl-0 = <&ts_int_default &ts_avdd_default>;
 	};
+};
+
+&mdss {
+	status = "okay";
+};
+
+&mdss_dsi0 {
+	vdda-supply = <&pm6125_l4>;
+	status = "okay";
+
+	panel: panel@0 {
+		compatible = "samsung,amoled";
+		reg = <0>;
+
+		// disp-te-gpios = <&tlmm 23 GPIO_ACTIVE_HIGH>;
+		reset-gpios = <&pmr735a_gpios 2 GPIO_ACTIVE_LOW>;
+
+		// avdd-supply = <&display_avdd_regulator>;
+		// vdd-supply = <&pm6125_l8>;
+
+		pinctrl-0 = <&panel_reset_pin &te_pin_default &ts_avdd_default>;
+		pinctrl-names = "default";
+
+		#address-cells = <1>;
+		#size-cells = <0>;
+
+		port {
+			panel_in: endpoint {
+				remote-endpoint = <&mdss_dsi0_out>;
+			};
+		};
+	};
+};
+
+&mdss_dsi0_out {
+	remote-endpoint = <&panel_in>;
+	data-lanes = <0 1 2 3>;
+};
+
+&mdss_dsi0_phy {
+	status = "okay";
 };
 
 &pmk8350_adc_tm {
@@ -157,6 +187,15 @@
 		power-source = <1>;
 		bias-pull-up;
 		input-enable;
+	};
+
+	panel_reset_pin: panel-reset-state {
+		pins = "gpio2";
+		function = "func1";
+		qcom,drive-strength = <PMIC_GPIO_STRENGTH_HIGH>;
+		power-source = <1>;
+		bias-disable;
+		output-low;
 	};
 };
 
@@ -222,8 +261,9 @@
 		};
 
 		pm6125_l4: l4 {
-			regulator-min-microvolt = <1100000>;
-			regulator-max-microvolt = <1300000>;
+			regulator-min-microvolt = <1200000>;
+			regulator-max-microvolt = <1200000>;
+			regulator-allow-set-load;
 		};
 
 		pm6125_l5: l5 {
@@ -245,6 +285,7 @@
 		pm6125_l8: l8 {
 			regulator-min-microvolt = <1100000>;
 			regulator-max-microvolt = <1304000>;
+			regulator-always-on;
 		};
 
 		pm6125_l9: l9 {
@@ -270,6 +311,7 @@
 		pm6125_l13: l13 {
 			regulator-min-microvolt = <1650000>;
 			regulator-max-microvolt = <1980000>;
+			regulator-always-on;
 		};
 
 		pm6125_l14: l14 {
@@ -406,6 +448,21 @@
 		function = "gpio";
 		drive-strength = <8>;
 		bias-pull-up;
+	};
+
+	te_pin_default: te-pin-default {
+		pins = "gpio23";
+		function = "mdp_vsync";
+		drive-strength = <2>;
+		bias-pull-down;
+	};
+
+	display_panel_avdd: display-panel-avdd-state {
+		pins = "gpio24";
+		function = "gpio";
+		drive-strength = <8>;
+		bias-disable;
+		output-high;
 	};
 
 	ts_avdd_default: ts-avdd-default-state {
