--- a/arch/arm64/boot/dts/qcom/sm8450.dtsi
+++ b/arch/arm64/boot/dts/qcom/sm8450.dtsi
@@ -2182,6 +2182,8 @@
 			#clock-cells = <1>;
 			#reset-cells = <1>;
 			#power-domain-cells = <1>;
+			power-domains = <&rpmhpd SM8450_MXC>;
+			required-opps = <&rpmhpd_opp_nom>;
 		};
 
 		adreno_smmu: iommu@3da0000 {
