--- a/arch/arm64/boot/dts/qcom/sm8450.dtsi
+++ b/arch/arm64/boot/dts/qcom/sm8450.dtsi
@@ -2187,7 +2187,7 @@
 		};
 
 		adreno_smmu: iommu@3da0000 {
-			compatible = "qcom,sm8450-smmu-500", "qcom,adreno-smmu",
+			compatible = "qcom,sm8450-smmu-500", /* "qcom,adreno-smmu", */
 				     "qcom,smmu-500", "arm,mmu-500";
 			reg = <0x0 0x03da0000 0x0 0x40000>;
 			#iommu-cells = <2>;
